cropping images, fixing paths

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ font-family: krok, sans-serif;
     flex-direction: column;
     background-color:rgb(178, 133, 147);
     width: 100vw;
-    height: 525px;
+    height: 600px;
    justify-content: center;
 }
 
@@ -125,7 +125,6 @@ font-family: krok, sans-serif;
     align-items: center;
 }
 
-
 .footer {
     display: flex;
     flex-direction: row;
@@ -133,7 +132,7 @@ font-family: krok, sans-serif;
     width: 100vw;
     height: 280px;
     position: relative;
-    justify-content: space-around
+    justify-content: space-around;
 }
 
 .img-foot {
@@ -141,12 +140,11 @@ display: flex;
 flex-direction: row;
 position: absolute;
 align-self: flex-end;
-padding-left: 55px;
-
+padding-left: 50px;
 }
 
 .links {
-    padding-left: 100px;
+    padding-left: 50px;
     padding-bottom: 25px;
     padding-top: 40px;
     line-height: 40px;
@@ -168,7 +166,7 @@ a:hover, a:active {
 h4 {font-family: krok, sans-serif;
     color: azure;
     font-size: 1.75em;
-    padding: 15px;
+    padding-right: 40px;
 }
 
 h3 {
@@ -176,6 +174,14 @@ h3 {
     color: azure;
     align-self: center;
     font-size: 2em;
+}
+
+h5 {
+    font-family: krok, sans-serif;
+    color: azure;
+    align-self: center;
+    font-size: 1.5em;
+    margin-top: 1%
 }
 
 
